exampleKubeFiles/coder/coderService.yml
apiVersion: v1
kind: Service
metadata:
  name: my-coder
  namespace: default
  labels:
    run: my-coder
spec:
  selector:
    run: my-coder
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8080
