exampleKubeFiles/coder/coderIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-coder
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
    - hosts:
        - coder.kubernetes.emanum.dev
      secretName: coder-kubernetes-emanum-dev-tls
  rules:
    - host: coder.kubernetes.emanum.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: my-coder
                port:
                  number: 80
